# perf-event-async

./: .prettierrc.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml
src/: lib.rs
tests/: basic.rs
