[package]
name = "perf-event-async"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [ "Phantomical" ]

[dependencies]
futures-core = "0.3.27"
libc = "0.2.141"
perf-event = { git = "https://github.com/phantomical/perf-event", branch = "sampling-work" }
tokio = { version = "1.26.0", features = ["net"] }

[dev-dependencies]
assert_matches = "1.5.0"
nix = "0.26.2"
tokio = { version = "1.26.0", features = ["full", "test-util"] }
